--- a/main.css
+++ b/main.css
@@ -1,26 +1,38 @@
 #app {
-	max-width: 700px;
-	margin: 0 auto;
-	background-color: white;
-	padding: 50px;
+    max-width: 800px;
+    margin: 50px auto 50px;
+    background-color: white;
+    padding: 50px;
+    min-height: 70%;
+    -webkit-box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.55);
+    box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.55);
 }
 
-html, body{
-	width: 100%;
-	min-height: 100%;
-	background-color: #efefef;
-	margin:0;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    background-color: #efefef;
+    margin: 0;
 }
 
 .node {
-	background-color: #f1f1f1;
-	margin: 10px 0;
+    background-color: white;
 }
 
-.node:focus {
-	outline: none;
+.node > .task:focus {
+    outline: none;
 }
 
-.point{
-	background-color: orange;
+.point {
+    background-color: orange;
+    margin: 0 0 0 0;
+    min-height: 5px;
+    min-width: 5px;
+}
+
+.task {
+    width: 95%;
+    display: inline-block;
 }
