--- a/main.css
+++ b/main.css
@@ -31,6 +31,16 @@ body {
     margin-left: -20px;
     min-height: 5px;
     min-width: 5px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.bullet:hover {
+	cursor: pointer;
 }
 
 .value {
