--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-color: #efefef;
+    background-color: white;
     margin: 0;
 }
 
