--- a/main.css
+++ b/main.css
@@ -68,12 +68,17 @@ footer{
 	text-align: center;
 	font-size: 10px;
 }
-/*
-.menubar {
+
+.ctrlBar {
 	position: absolute;
-	margin: -50px;
+	top: 0px;
+	height: 50px;
+	width: 50px;
+	background-color: green;
+	opacity: 0.5;
+
 }
-*/
+
 .highlighted {
-	background-color: #f3f3f3;
+	background-color: #f5f5f5;
 }
