implemented major ctrlbar features except addNote

--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 .bullet {
-	position: absolute;
+    position: absolute;
     min-height: 5px;
     min-width: 5px;
     -webkit-touch-callout: none;
@@ -50,6 +50,7 @@ body {
     min-width: 50%;
     max-width: 100%;
     display: inline-block;
+    z-index: 1;
 }
 
 .children {
@@ -64,22 +65,46 @@ body {
     background-color: orange;
 }
 
-footer{
-	font-family: Helvetica;
-	text-align: center;
-	font-size: 10px;
+footer {
+    font-family: Helvetica;
+    text-align: center;
+    font-size: 10px;
 }
 
 .ctrlBar {
-	position: absolute;
-	top: 15px;
-	height: 50px;
-	width: 50px;
-	background-color: green;
-	opacity: 0.5;
+    position: absolute;
+    top: 15px;
+    height: 70px;
+    width: 90px;
+    background-color: yellow;
+    z-index: 10;
+    border-radius: 5px;
+    border-width: 0.5px;
+    border-style: solid;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
+.ctrlBar > ul {
+    list-style-type: none;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+    font-size: 10px;
+}
+
+.ctrlBar li:hover {
+    cursor: pointer;
 }
 
 .highlighted {
-	background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
+
+.completed > .value{
+	text-decoration: line-through;
+}
+
