--- a/main.css
+++ b/main.css
@@ -31,8 +31,8 @@ body {
 
 .bullet {
     position: absolute;
-    min-height: 5px;
-    min-width: 5px;
+    height: 20px;
+    width: 20px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -63,8 +63,6 @@ body {
 
 .bullet-clicked {
 	background-color: orange;
-	max-width: 10.375px;
-	max-height: 20px;
 	opacity: 0.5;
 }
 
@@ -79,7 +77,7 @@ footer {
     top: 15px;
 
     width: 90px;
-    background-color: yellow;
+    background-color: #ccc;
     z-index: 10;
     border-radius: 5px;
     border-width: 0.5px;
