ctrlBar completeTask styling fix

--- a/main.css
+++ b/main.css
@@ -109,6 +109,6 @@ footer {
 	text-decoration: line-through;
 }
 
-.completed .completeTask {
+.completed > .ctrlBar .completeTask {
 	text-decoration: line-through;
 }
