--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,15 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;
     }
+
+    @mixin selectable($val) {
+        -webkit-touch-callout: $val;
+        -webkit-user-select: $val;
+        -khtml-user-select: $val;
+        -moz-user-select: $val;
+        -ms-user-select: $val;
+        user-select: $val;
+    }
     
     html,
     body {
@@ -17,19 +26,19 @@
         background-color: white;
         margin: 0;
     }
-
+    
     #header {
         margin: 0 auto;
         text-align: center;
-        a{
+        a {
             font-family: "Curlz MT";
             font-size: 30px;
-            &:hover{
+            &:hover {
                 text-decoration: none;
             }
         }
     }
-
+    
     #app {
         max-width: 800px;
         margin: 25px auto 25px;
@@ -58,14 +67,7 @@
         }
         .bullet {
             position: absolute;
-            height: 20px;
-            width: 20px;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
+            @include selectable(none);
             &:hover {
                 cursor: pointer;
             }
