--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,16 +9,20 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;
     }
-
-    @mixin selectable($val) {
-        -webkit-touch-callout: $val;
-        -webkit-user-select: $val;
-        -khtml-user-select: $val;
-        -moz-user-select: $val;
-        -ms-user-select: $val;
-        user-select: $val;
-    }
     
+    @mixin unselectable {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    }
+
+    @function nodeValueWidth($appWidth,$appPaddingSide,$margin-left){
+        @return $appWidth - ($appPaddingSide*2) - $margin-left;
+    }
+
     html,
     body {
         width: 100%;
@@ -33,20 +37,24 @@
         a {
             font-family: "Curlz MT";
             font-size: 30px;
-            @include selectable(none);
+            @include unselectable;
             &:hover {
                 text-decoration: none;
             }
-            &:focus{
+            &:focus {
                 text-decoration: none;
                 outline: none;
             }
         }
     }
-    
+
+    $appWidth: 800px;
+    $appPaddingSide: 40px;
+    $appMargin: (25px auto);
+
     #app {
         max-width: 800px;
-        margin: 25px auto 25px;
+        margin: $appMargin;
         background-color: white;
         padding: 35px 40px;
         min-height: 85%;
@@ -72,7 +80,7 @@
         }
         .bullet {
             position: absolute;
-            @include selectable(none);
+            @include unselectable;
             &:hover {
                 cursor: pointer;
             }
@@ -81,9 +89,11 @@
             }
         }
         .value {
-            margin-left: 20px;
-            min-width: 50%;
-            max-width: 100%;
+            $margin-left: 15px;
+            margin-left: $margin-left;
+            // min-width: nodeValueWidth($appWidth,$appPaddingSide,$margin-left);
+            width: 100%;
+            height: 20px;
             display: inline-block;
             z-index: 1;
             &:focus {
@@ -91,7 +101,7 @@
             }
         }
         .children {
-            margin-left: 50px;
+            margin-left: 30px;
             &.hidden {
                 display: none;
             }
@@ -99,27 +109,24 @@
         .ctrlBar {
             position: absolute;
             top: 15px;
-            width: 90px;
+            // width: 90px;
+            padding: 2.5px 5px;
             background-color: #ccc;
             z-index: 10;
             border-radius: 5px;
             border-width: 0.5px;
             border-style: solid;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
+            @include border-box;
             >ul {
                 list-style-type: none;
-                -webkit-margin-before: 0em;
-                -webkit-margin-after: 0em;
-                -webkit-margin-start: 0px;
-                -webkit-margin-end: 0px;
-                -webkit-padding-start: 0px;
+                margin: 0;
+                padding: 0;
                 font-size: 10px;
                 li {
                     &:hover {
                         cursor: pointer;
                     }
+                    width: 100%;
                 }
             }
         }
@@ -129,5 +136,5 @@
         font-family: Helvetica;
         text-align: center;
         font-size: 10px;
-        @include selectable(none);
+        @include unselectable;
     }
